--- a/docs/Blogs/posts/published/00000000-example.md
+++ b/docs/Blogs/posts/published/00000000-example.md
@@ -8,7 +8,7 @@ slug: example-post-draft
 authors:
   - <qihang>
 ---
-# Example Post Draft
+# Example Post Draft of Jossie's Blog
 This is an example post draft.
 <!-- more -->
 ## Overview
