refactor: update author information and add new SVG assets

--- a/docs/Blogs/posts/published/00000002-uv.md
+++ b/docs/Blogs/posts/published/00000002-uv.md
@@ -9,7 +9,7 @@ links: []
 readtime: 10
 slug: uv-cheatsheet
 authors:
-  - <qihang>
+  - <jossie>
 ---
 # UV Cheatsheet
 [UV](https://docs.astral.sh/uv/) can serve as a faster and more efficient package manager for python. It's very easy to switch to uv if you used to use conda and pip. Here are the basic usage of uv.
