--- a/docs/Blogs/posts/published/00000000-example.md
+++ b/docs/Blogs/posts/published/00000000-example.md
@@ -6,7 +6,7 @@ links: []
 readtime: 1
 slug: example-post-draft
 authors:
-  - <qihang>
+  - <jossie>
 ---
 # Example Post Draft of Jossie's Blog
 This is an example post draft.
